2009-01-03  Paolo Carlini  <paolo.carlini@oracle.com>

	* Revert last commit, reopen and suspend libstdc++/38678.

2009-01-01  Paolo Carlini  <paolo.carlini@oracle.com>

	PR libstdc++/38678
	* include/std/istream (basic_istream<>::_M_read): New.
	* include/bits/istream.tcc (basic_istream<>::_M_read): Define.
	(basic_istream<>::read, basic_istream<>::readsome): Use it.
	* include/std/ostream (basic_ostream<>::_M_write_): New.
	(basic_ostream<>::_M_write): Adjust.
	* include/bits/ostream.tcc (basic_ostream<>::_M_write_): Define.
	* testsuite/27_io/basic_istream/read/char/38678.cc: New.
	* testsuite/27_io/basic_istream/read/wchar_t/38678.cc: Likewise.
	* testsuite/27_io/basic_ostream/write/char/38678.cc: Likewise.
	* testsuite/27_io/basic_ostream/write/wchar_t/38678.cc: Likewise.

2008-12-22  Jonathan Larmour  <jifl@eCosCentric.com>

	* include/ext/concurrence.h: Fix __gthread_cond_t initialisation
	function macro name.

2008-12-22  Benjamin Kosnik  <bkoz@redhat.com>

	* doc/doxygen/stdheader.cc: Add cstdlib.
	* doc/doxygen/user.cfg.in: Regenerate for doxygen 1.5.7.

2008-12-21  Andrew Pinski  <pinskia@gmail.com>

	PR target/38300
	* configure: Regenerate.

2008-12-21  Paolo Carlini  <paolo.carlini@oracle.com>

	PR libstdc++/38596
	* include/tr1_impl/functional (function<>::target,
	function<>::target_type): Provide only when __GXX_RTTI is defined.
	(_Function_base::_M_manager, _Ref_manager<>::_M_manager,
	_Function_handler<void(_ArgTypes...), _Member _Class::*>::_M_manager):
	Adjust.

2008-12-19  Ben Elliston  <bje@au.ibm.com>

	* acinclude.m4: Guard a variable test against an empty string.
	* configure: Regenerate.

2008-12-18  Jack Howarth  <howarth@bromo.med.uc.edu>

	* testsuite/21_strings/basic_string/element_access/wchar_t/21674.cc:
	Add xfail on all targets except darwin.
	* libstdc++-v3/testsuite/21_strings/basic_string/element_access/char/
	1674.cc: Same.
	* libstdc++-v3/testsuite/22_locale/ctype/is/char/2.cc: Correct syntax