@@ -1,3 +1,9 @@
+2009-01-04  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR libstdc++/38719
+	* include/bits/forward_list.h (_Fwd_list_iterator<>::_M_next,
+	_Fwd_list_const_iterator::_M_next): Fix return type.
+
 2009-01-03  Paolo Carlini  <paolo.carlini@oracle.com>
 
 	* Revert last commit, reopen and suspend libstdc++/38678.
